# test_tree_menu

./: .gitignore  README.MD  pyproject.toml
app/: settings.py  urls.py
tree_menu/: admin.py  forms.py  models.py  urls.py  views.py
tree_menu/migrations/: 0001_initial.py  0002_alter_item_left_key_alter_item_parent_and_more.py  0003_alter_menu_name_alter_item_unique_together.py
tree_menu/services/: tree_save.py
tree_menu/templates/: index.html
tree_menu/templates/tags/: draw_menu.html
tree_menu/templatetags/: menu_tags.py
