[tool.poetry]
name = "test-tree-menu"
version = "0.1.0"
description = ""
authors = ["karim <garkarim02@mail.ru>"]
readme = "README.md"
packages = [{include = "test_tree_menu"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
